cc: Fix CALayer filtering for TileDrawQuad

BUG=723975
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2913083002
Cr-Commit-Position: refs/heads/master@{#475754}

Former-commit-id: 7135e898f08758f2968c75dde6a16aa428a48084